[package]
name = "ethtracking-bot"
version = "0.1.0"
authors = ["Deshi Xiao <xiaods@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
futures-preview = "=0.3.0-alpha.19"
tokio = "0.2.0-alpha.5"